<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">虚拟恋人</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">返回</string>
    <string name="app_description">"找个"虚拟恋人告别单身,让你一发不可收拾爱上它</string>
    <string name="drawer_open">drawer_open</string>
    <string name="drawer_close">drawer_close</string>
    <string name="title_activity_third_party_login">ThirdPartyLogin</string>
    <string name="email_login">邮箱登录</string>
    <string name="register">马上注册</string>
    <string name="registerBtn">注册</string>
    <string name="title_activity_login">邮箱登录</string>
    <string name="email">电子邮箱</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="forgetpwd">忘记密码?</string>
    <string name="title_activity_forget_pwd">找回密码</string>
    <string name="forgetpwd_str">我们将会给你发送密码重置的邮件,请在确认发送后登录邮箱根据指示修改你的密码</string>
    <string name="okay">确认</string>
    <string name="title_activity_register">马上注册</string>
    <string name="confirm_pwd">确认密码</string>
    <string name="nicename">昵称</string>
    <string name="step">下一步</string>
    <string name="propaganda">让你一发不可收拾爱上它</string>
    <string name="app_menu_surelogout">确定退出程序吗？</string>
    <string name="sure">确定</string>
    <string name="cancle">取消</string>
    <string name="hot">大家喜欢看</string>
    <string name="title_activity_hot">我的收藏</string>
    <string name="title_activity_apply">申请成为恋人</string>
    <string name="title_activity_feedback">反馈意见</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="toast_email_null">邮箱地址不能为空</string>
    <string name="toast_email_invalid">邮箱地址无效</string>
    <string name="toast_pwd_null">密码不能为空</string>
    <string name="toast_niceName_null">昵称不能为空</string>
    <string name="network_tips">当前网络不可用,请检查您的网络!</string>
    <string name="title_activity_mine">我的虚拟恋人</string>
    <string name="text_ack_msg">已读</string>
    <string name="text_delivered_msg">送达</string>
    <string name="back">返回</string>
    <string name="save">保存</string>
    <string name="button_pushtotalk">按住说话</string>
    <string name="button_send">发送</string>
    <string name="attach_smile">表情</string>
    <string name="attach_picture">图片</string>
    <string name="attach_take_pic">拍照</string>
    <string name="attach_location">位置</string>
    <string name="attach_file">文件</string>
    <string name="attach_voice_call">语音电话</string>
    <string name="user_card">名片</string>
    <string name="move_up_to_cancel">手指上滑，取消发送</string>
    <string name="release_to_cancel">松开手指，取消发送</string>
    <string name="send_fail">发送消息失败,</string>
    <string name="delete_message">删除消息</string>
    <string name="copy_message">复制消息</string>
    <string name="delete_voice">删除语音</string>
    <string name="delete_video">删除视频</string>
    <string name="delete">删除</string>
    <string name="resend">重发</string>
    <string name="confirm_resend">确认重发该信息？</string>
    <string name="connect_failuer_toast">请检查网络或稍候重试</string>
    <string name="network_unavailable">网络连接不可用，请检查网络</string>
    <string name="copy">复制</string>
    <string name="forward">转发</string>
    <string name="button_logout">退出登录</string>
    <string name="button_uploadlog">上传运行日志</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="prompt">提示</string>
    <string name="clear_records">清空记录</string>
    <string name="clear_all_records">是否清空所有聊天记录？</string>
    <string name="location_recv">[%1$s的位置]</string>
    <string name="location_message">位置信息</string>
    <string name="recording_video">录制视频</string>
    <string name="location_prefix">[我的位置]</string>
    <string name="voice">[语音]</string>
    <string name="picture">[图片]</string>
    <string name="video">[视频]</string>
    <string name="file">[文件]</string>
    <string name="voice_call">[语音通话]</string>
    <string name="button_cancel">取消</string>
    <string name="button_save">保存</string>
    <string name="button_search">查找</string>
    <string name="button_add">添加</string>
    <string name="search_header">搜</string>
    <string name="network_isnot_available">网络不可用</string>
    <string name="recoding_fail">录音失败，请重试！</string>
    <string name="select_contacts">选择联系人</string>
    <string name="confirm_forward_to">确定转发到：%1$s ?</string>
    <string name="logout">退出登录</string>
    <string name="logout_hint">退出后不会删除任何历史数据，下次登录依然可以使用本账号</string>
    <string name="exit_group_hint">退出后，将不再接收此群聊信息</string>
    <string name="dissolution_group_hint">退出后，此群将被解散</string>
    <string name="exit_group">退出</string>
    <string name="connect_conflict">同一帐号已在其他设备登录</string>
    <string name="actionbar_activity_not_found">Failed to open intent…</string>
    <string name="title_activity_comment">发表评论</string>

</resources>
