<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="me.edagarli.invisiblelovers.ui.RegisterActivity">

    <EditText
        android:id="@+id/email"
        android:hint="@string/email"
        android:layout_width="match_parent"
        android:layout_height="50dp" />

    <EditText
        android:id="@+id/password"
        android:hint="@string/password"
        android:layout_marginTop="60dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:inputType="textPassword"
        />

    <!--<EditText-->
        <!--android:id="@+id/confirmPwd"-->
        <!--android:hint="@string/confirm_pwd"-->
        <!--android:layout_marginTop="120dp"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="50dp"-->
        <!--/>-->

    <EditText
        android:id="@+id/nicename"
        android:hint="@string/nicename"
        android:layout_marginTop="120dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        />

    <Button
        android:id="@+id/register"
        android:text="@string/registerBtn"
        android:background="#4c39ae"
        android:textColor="#ffffff"
        android:layout_marginTop="180dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</RelativeLayout>
