<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="me.edagarli.invisiblelovers.ui.ForgetPwdActivity">

    <EditText
        android:id="@+id/email"
        android:hint="@string/email"
        android:layout_width="match_parent"
        android:layout_height="50dp" />

    <TextView
        android:text="@string/forgetpwd_str"
        android:layout_marginTop="60dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <Button
        android:id="@+id/okay"
        android:text="@string/okay"
        android:background="#4c39ae"
        android:textColor="#ffffff"
        android:layout_marginTop="105dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</RelativeLayout>
