<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="me.edagarli.invisiblelovers.ui.ThirdPartyLoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:background="#4c39ae">
             <ImageView
                 android:src="@drawable/ic_launcher"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="50dp"
                 />

             <TextView
                 android:text="@string/app_name"
                 android:textSize="45dp"
                 android:textColor="#ffffff"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"/>

             <TextView
                 android:text="@string/propaganda"
                 android:textSize="20dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
                 android:textColor="#ffffff"
                 android:layout_marginBottom="15dp"/>
        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">
        <Button
            android:id="@+id/login"
            android:layout_width="260dp"
            android:layout_height="50dp"
            android:background="@drawable/shapethird"
            android:text="@string/email_login"
            android:textColor="#4c39ae"
            />

        <Button
            android:id="@+id/register"
            android:layout_width="260dp"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/shapethird"
            android:text="@string/register"
            android:textColor="#4c39ae" />

        <!--<LinearLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:gravity="center"-->
            <!--android:layout_gravity="center"-->
            <!--android:orientation="horizontal"-->
            <!--android:layout_marginTop="15dp"-->
            <!-->-->
            <!--<ImageView-->
                <!--android:id="@+id/weibo"-->
                <!--android:src="@drawable/weibo"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--/>-->
            <!--<ImageView-->
                <!--android:id="@+id/qq"-->
                <!--android:src="@drawable/qq"-->
                <!--android:layout_marginLeft="20dp"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--/>-->
        <!--</LinearLayout>-->
    </LinearLayout>
</LinearLayout>
